# pytorch_with_gazelle

./: .gitignore  .gitmodules  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE.bazel  gazelle_python.yaml  requirements.txt  requirements_lock.txt
patches/: BUILD.bazel  pyo3-build-config.patch  pyo3-ffi.patch  pyo3.patch  rules_python_annotation.patch
pyo3_example/: BUILD.bazel  example.py  example_lib.rs
pyo3_example/src/: example_lib.rs  lib.rs
rust_project/: BUILD.bazel
rust_project/src/: main.rs
rustfilt/: BUILD.rustfilt.bazel
test_project/: BUILD.bazel  __main__.py  __test__.py  main.py  my_test.py
