load("@rules_python//python:defs.bzl", "py_test")
# load("@rules_pyo3//:build_defs.bzl", "pyo3_extension")
# load("pyo3.bzl", "pyo3_extension")


# pyo3_extension(
#     name = "ext",
#     srcs = ["ext.rs"],
# )


package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_shared_library")

# TODO: https://github.com/TheButlah/rules_pyo3/blob/master/build_defs.bzl

rust_shared_library(
    name = "example_lib_rs",
    srcs = ["src/lib.rs", "src/example_lib.rs"],
    deps = [
        "@pyo3//:pyo3",
    ],
)

genrule(
    name = "example_lib_so",
    srcs = [":example_lib_rs"],
    outs = ["example_lib.so"],
    cmd = "cp $< $@",
)

py_library(
    name = "example_lib",
    srcs = [],
    data = ["example_lib.so"],
)

py_binary(
    name = "example",
    srcs = ["example.py"],
    deps = [":example_lib"]
)
# py_test(
#     name = "use_ext",
#     srcs = ["use_ext.py"],
#     deps = [":example_lib"]
# )
