load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "test_project",
    srcs = ["main.py"],
    imports = [".."],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "test_project_bin",
    srcs = ["__main__.py"],
    imports = [".."],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        ":test_project",
        "@pip//torch",
    ],
)

py_test(
    name = "test_project_test",
    srcs = [
        "__test__.py",
        "my_test.py",
    ],
    imports = [".."],
    main = "__test__.py",
    deps = [":test_project"],
)
